[metadata]
name = easy-wechat
version = attr: wechat.VERSION
description = My package description
long_description = file: README.md
keywords = wechat
license = MIT License
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

author = "Younger Shen"
author_email = "younger.x.shen@gmail.com"
url = https://github.com/youngershen/easy-wechat

[options]
package_dir =
    =src
zip_safe = True
packages = wechat
install_requires =
  requests
python_requires = >=3.6

[bdist_wheel]
universal=0

